idf_component_register(SRCS "main.cpp"
							"aero.cpp"
							"atmosphere.cpp"
							"bitcount.cpp"
							"ctrl.cpp"
							"disp.cpp"
							"disp_lcd.cpp"
							"disp_oled.cpp"
							"format.cpp"
							"gps.cpp"
							"hal.cpp"
							"intmath.cpp"
							"ldpc.cpp"
							"log.cpp"
							"main.cpp"
							"nmea.cpp"
							"ognconv.cpp"
							"proc.cpp"
							"rf.cpp"
							"sens.cpp"
							"st7789.cpp"
							"timesync.cpp"
						EMBED_FILES "OGN_logo_240x240.jpg"
                       INCLUDE_DIRS "."
					   INCLUDE_DIRS "../components")
